--- a/src/main/resources/static/admin-dashboard.html
+++ b/src/main/resources/static/admin-dashboard.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -13,7 +16,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Incident Management System</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -41,48 +52,46 @@
     <div class="card-body">
       <h5 class="card-title">All Incidents</h5>
 
-      <!-- Add Filter Dropdowns ABOVE the table -->
-      <div class="mb-3">
-        <label for="filterStatus" class="form-label">Filter by Status:</label>
-        <select id="filterStatus" class="form-select w-25" onchange="filterIncidents()">
-          <option value="All">All</option>
-          <option value="Open">Open</option>
-          <option value="Ongoing">Ongoing</option>
-          <option value="Closed">Closed</option>
-        </select>
+      <!-- Filters -->
+      <div class="row mb-3">
+        <div class="col-md-4">
+          <label for="filterStatus" class="form-label">Filter by Status:</label>
+          <select id="filterStatus" class="form-select" onchange="filterIncidents()">
+            <option value="All">All</option>
+            <option value="Open">Open</option>
+            <option value="Ongoing">Ongoing</option>
+            <!-- Removed "Closed" option entirely -->
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label for="filterTeam" class="form-label">Filter by Team:</label>
+          <select id="filterTeam" class="form-select" onchange="filterIncidents()">
+            <option value="All">All</option>
+            <option value="1">IT</option>
+            <option value="2">HR</option>
+            <option value="3">Support</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label for="filterAdmin" class="form-label">Filter by Admin:</label>
+          <select id="filterAdmin" class="form-select" onchange="filterIncidents()">
+            <option value="All">All</option>
+            <option value="1">john.doe</option>
+            <option value="2">jane.smith</option>
+            <option value="3">michael.johnson</option>
+          </select>
+        </div>
       </div>
 
-      <div class="mb-3">
-        <label for="filterTeam" class="form-label">Filter by Team:</label>
-        <select id="filterTeam" class="form-select w-25" onchange="filterIncidents()">
-          <option value="All">All</option>
-          <option value="1">IT</option>
-          <option value="2">HR</option>
-          <option value="3">Support</option>
-        </select>
-      </div>
-
-      <div class="mb-3">
-        <label for="filterAdmin" class="form-label">Filter by Admin:</label>
-        <select id="filterAdmin" class="form-select w-25" onchange="filterIncidents()">
-          <option value="All">All</option>
-          <option value="1">john.doe</option>
-          <option value="2">jane.smith</option>
-          <option value="3">michael.johnson</option>
-        </select>
-      </div>
-
+      <!-- Incidents Table -->
       <table class="table table-striped table-bordered">
         <thead class="table-dark">
         <tr>
           <th>Incident ID</th>
           <th>Title</th>
           <th>Description</th>
-          <th>Severity Level</th>
           <th>Status</th>
-          <th>Assigned Team</th>
-          <th>Assigned Admin</th>
-          <th>Actions</th>
+          <th>Actions</th> <!-- ▼ Expand Button -->
         </tr>
         </thead>
         <tbody id="admin-incidents-table">
@@ -93,7 +102,57 @@
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Resolve Modal -->
+<div class="modal fade" id="resolveModal" tabindex="-1" aria-labelledby="resolveModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="resolveModalLabel">Resolve Incident</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <textarea
+                id="resolutionText"
+                class="form-control"
+                rows="5"
+                placeholder="Describe the cause and fix..."
+        ></textarea>
+        <input type="hidden" id="resolveIncidentId" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" onclick="submitResolution()">Set as Resolved</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Resolution Details Modal -->
+<div class="modal fade" id="resolutionDetailsModal" tabindex="-1" aria-labelledby="resolutionDetailsModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="resolutionDetailsModalLabel">Resolution Details</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      <!-- Make the modal body scrollable and wrap text -->
+      <div class="modal-body" style="max-height: 70vh; overflow-y: auto;">
+        <p id="resolutionDetailsText" class="wrap-resolution"></p>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+></script>
 <script src="admin-script.js"></script>
 </body>
 </html>
