--- a/src/main/resources/static/similarity-search.html
+++ b/src/main/resources/static/similarity-search.html
@@ -34,7 +34,21 @@
       <h5 class="card-title">Search for Similar Incidents</h5>
       <input type="text" id="incidentNumber" class="form-control" placeholder="Enter Incident Number (e.g., INC123456)" />
       <button class="btn btn-primary mt-2" onclick="searchSimilarIncidents()">Search</button>
-      <div id="searchResults" class="mt-3"></div>
+
+      <div class="table-responsive mt-4" id="searchResultsContainer" style="display: none;">
+        <table class="table table-striped table-bordered">
+          <thead class="table-dark">
+          <tr>
+            <th>Incident ID</th>
+            <th>Title</th>
+            <th>Status</th>
+            <th>Match</th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+          <tbody id="similarIncidentsTable"></tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
