--- a/src/main/resources/static/admin-dashboard.html
+++ b/src/main/resources/static/admin-dashboard.html
@@ -60,7 +60,7 @@
             <option value="All">All</option>
             <option value="Open">Open</option>
             <option value="Ongoing">Ongoing</option>
-            <!-- Removed "Closed" option entirely -->
+            <option value="Resolved">Resolved</option>
           </select>
         </div>
         <div class="col-md-4">
@@ -68,20 +68,16 @@
           <select id="filterTeam" class="form-select" onchange="filterIncidents()">
             <option value="All">All</option>
             <option value="1">IT</option>
-            <option value="2">HR</option>
-            <option value="3">Support</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label for="filterAdmin" class="form-label">Filter by Admin:</label>
-          <select id="filterAdmin" class="form-select" onchange="filterIncidents()">
-            <option value="All">All</option>
-            <option value="1">john.doe</option>
-            <option value="2">jane.smith</option>
-            <option value="3">michael.johnson</option>
+            <option value="3">HR</option>
+            <option value="4">Support</option>
           </select>
         </div>
       </div>
+      <div class="input-group mb-3">
+        <input type="text" id="incidentSearchInput" class="form-control" placeholder="Enter Incident Number (e.g. INCEC898DAF)">
+        <button class="btn btn-primary" onclick="searchIncidentByNumber()">Search</button>
+      </div>
+
 
       <!-- Incidents Table -->
       <table class="table table-striped table-bordered">
@@ -98,6 +94,11 @@
         <!-- Incidents will be populated dynamically -->
         </tbody>
       </table>
+      <div id="pagination-controls" class="d-flex justify-content-center mt-3">
+        <button id="prevPage" class="pagination-btn me-2" onclick="changePage(-1)">« Prev</button>
+        <div id="pageNumbers" class="btn-group"></div>
+        <button id="nextPage" class="pagination-btn ms-2" onclick="changePage(1)">Next »</button>
+      </div>
     </div>
   </div>
 </div>
@@ -124,8 +125,12 @@
         <button type="button" class="btn btn-primary" onclick="submitResolution()">Set as Resolved</button>
       </div>
     </div>
+
   </div>
 </div>
+
+
+
 
 <!-- Resolution Details Modal -->
 <div class="modal fade" id="resolutionDetailsModal" tabindex="-1" aria-labelledby="resolutionDetailsModalLabel" aria-hidden="true">
@@ -148,6 +153,43 @@
   </div>
 </div>
 
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteConfirmLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteConfirmLabel">Confirm Deletion</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this incident?
+        <input type="hidden" id="confirmDeleteIncidentId">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" onclick="deleteIncident()">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Success Modal -->
+<div class="modal fade" id="deleteSuccessModal" tabindex="-1" aria-labelledby="deleteSuccessLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteSuccessLabel">Success</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Incident deleted successfully!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <script
