--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,25 +34,32 @@
     <div class="card shadow-sm">
         <div class="card-body">
             <h5 class="card-title">Submit a New Incident</h5>
-            <form id="incident-form">
+            <form id="incident-form" novalidate>
                 <div class="mb-3">
                     <label for="title" class="form-label">Short Description</label>
-                    <input type="text" id="title" class="form-control" placeholder="Briefly describe the issue" required>
+                    <input type="text" class="form-control" id="title" required minlength="20">
+                    <div class="invalid-feedback">Short description must be at least 20 characters long.</div>
                 </div>
+
                 <div class="mb-3">
                     <label for="description" class="form-label">Detailed Description</label>
-                    <textarea id="description" class="form-control" placeholder="Provide a detailed description" required></textarea>
+                    <textarea class="form-control" id="description" rows="4" required minlength="50"></textarea>
+                    <div class="invalid-feedback">Detailed description must be at least 50 characters long.</div>
                 </div>
+
                 <div class="mb-3">
-                    <label for="status" class="form-label">Severity Level</label>
-                    <select id="status" class="form-select">
+                    <label for="status" class="form-label">Severity</label>
+                    <select class="form-select" id="status" required>
                         <option value="Low">Low</option>
                         <option value="Medium">Medium</option>
                         <option value="High">High</option>
                     </select>
+                    <div class="invalid-feedback">Please select a severity level.</div>
                 </div>
+
                 <button type="submit" class="btn btn-primary">Submit Incident</button>
             </form>
+
         </div>
     </div>
 </div>
@@ -73,6 +80,45 @@
         </tbody>
     </table>
 </div>
+
+<!-- Confirm Submit Incident Modal -->
+<div class="modal fade" id="confirmSubmitModal" tabindex="-1" aria-labelledby="confirmSubmitModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmSubmitModalLabel">Confirm Submission</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to submit this incident?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="confirmSubmitBtn">Yes, Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Success Modal -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="successModalLabel">Success</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Incident created successfully!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
