Final push - code updated and finished

--- a/src/main/resources/static/admin-dashboard.html
+++ b/src/main/resources/static/admin-dashboard.html
@@ -87,6 +87,7 @@
           <th>Title</th>
           <th>Description</th>
           <th>Status</th>
+          <th>Created At</th>
           <th>Actions</th> <!-- ▼ Expand Button -->
         </tr>
         </thead>
